--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,17 @@
   <meta name="twitter:image" content="%PUBLIC_URL%/twitter-image.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
   <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+  <link rel="stylesheet" href="/bower_components/aos/dist/aos.css">
+<link rel="stylesheet" href="/styles.css?v=2">
+
   <title>MGAREKLAMA</title>
 
 
 </head>
 <body>
 <div id="root"></div>
+<script src="/bower_components/aos/dist/aos.js"></script>
+
 <script src="bower_components/aos/dist/aos.js"></script>
 </body>
 </html>
